--- a/app/templates/tutor/tutorview.html
+++ b/app/templates/tutor/tutorview.html
@@ -41,7 +41,7 @@
                     {% for time, netid in apt_tutor %}
                     <li class="list-group-item">
                       {{time.strftime('%A, %B %d')}} at {{time.strftime('%I:%M %p')}} with {{names[netid]}}
-                      <button class="btn warm-btn float-end view-cancel" data-tutor_netid="{{user[2]}}" data-date="{{date}}" data-time="{{time}}">View/Cancel</button> 
+                      <button class="btn warm-btn float-end view-cancel" data-tutor_netid="{{user[2]}}" data-date="{{time.strftime('%Y-%m-%d')}}" data-time="{{time.strftime('%I:%M %p')}}">View/Cancel</button> 
                     </li>
                     {% endfor %}
                 </ul>
