Changed submit button value for booking

--- a/app/templates/appointment_popup.html
+++ b/app/templates/appointment_popup.html
@@ -82,7 +82,7 @@
                         <input type="hidden" name="tutor_netid" value="{{tutor.get_netid()}}">
                         <input type="hidden" name="tutor_name" value="{{tutor.get_name()}}">
                         <input type="hidden" name="student_netid" value="{{user[2]}}">
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="Book Appointment">
                         {% endif %}    
                         <br>
             
