--- a/app/templates/student/cancel_confirmation.html
+++ b/app/templates/student/cancel_confirmation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <!-- =========================================================== -->
-<!-- student_confirmation.html                                       -->
-<!-- Author: Sofia Marina                                         -->
+<!-- cancel_confirmation.html                                    -->
+<!-- Author: Hita Gupta                                          -->
 <!-- =========================================================== -->
 
 
@@ -27,7 +27,7 @@
 
     <body>
         {% include 'headerDynamic.html' with context %}
-        Thank you for scheduling an appointment with {{tutor}}!<br>
+        Your appointment has been successfully canceled.
         <hr><button class="btn warm-btn" onclick="window.location.href='{{url_for('studentview', netid=user[2])}}'">Go Back</button>
 
         <!DOCTYPE html>
