More UI changes

--- a/app/templates/admin/add_users.html
+++ b/app/templates/admin/add_users.html
@@ -30,7 +30,7 @@
                     <input type="file" id="users_file" name="users_file">
                     <br>
 
-                    <input type="submit" class="btn warm-btn float-none" value="Submit">
+                    <input type="submit" class="btn warm-btn float-none" value="Upload">
 
                 </form>
             </div>
