--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -58,6 +58,11 @@ body {
     border: 1px solid #ccc;
 }
 
+.add-time {
+    margin: 5px;
+    border: 1px solid #ccc;
+}
+
 .tutor-column {
     width: 20%; 
 }
