--- a/app/templates/headerDynamic.html
+++ b/app/templates/headerDynamic.html
@@ -15,6 +15,9 @@
         <div class="col text-center text-white">
           <h1 class="my-2 ">ECO {{ user[1][0]|upper}}{{user[1][1:] }} Scheduling</h1>
           <p>Welcome, {{ user[0] }}! You are logged in as a {{ user[1] }}</p>
+          {% if user[1] == "tutor" %}
+          <button class="btn warm-btn edit-tutor-bio" data-tutor_netid="{{user[2]}}">View/Edit My Bio</button>
+          {% endif %}
         </div>
       </div>
     </div>
