--- a/app/templates/tutor/confirm_copy_times.html
+++ b/app/templates/tutor/confirm_copy_times.html
@@ -16,6 +16,7 @@
                 Are you sure you want to copy your time slots from the previous week? This will overwrite any unbooked existing times you have for this week ({{min_date.strftime('%A, %B %d')}} to {{max_date.strftime('%A, %B %d')}}).
                 <br>
                 <button class="btn warm-btn" onclick="window.location.href='{{ url_for('copy_prev_week', min_date=min_date.strftime('%Y-%m-%d'), max_date=max_date.strftime('%Y-%m-%d')) }}'">Yes</button>
+                <button class="btn warm-btn" data-bs-dismiss="modal">No</button>
             </div>
         </div>
     </div>
