--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -22,6 +22,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
         <!-- Include external JavaScript file -->
         <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/schedule.js') }}"></script>
         <style>
             .hover-container {
                 position: relative;
