--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -21,18 +21,19 @@ body {
 .warm-btn {
     background-color: #F4A460; 
     border-color: #DEB887;
-    color: white;
+    color: black;
 }
 
 .warm-btn:hover {
     background-color: #DEB887; 
     border-color: #F4A460; 
+    color: black;
 }
 
 .warm-btn:disabled{
     background-color: #F4A460; 
     border-color: #DEB887;
-    color: white;
+    color: black;
 }
 
 .centered {
@@ -71,3 +72,7 @@ body {
     cursor: not-allowed;
     pointer-events: none;
  }
+
+input[type="text"][disabled] {
+    color:#504d4a42
+}
