--- a/app/templates/tutor/tutorview.html
+++ b/app/templates/tutor/tutorview.html
@@ -34,7 +34,7 @@
             <!-- Current Appointments Block -->
             <div class="col-md-6">
               <div class="card">
-                <div class="card-header custombg-warm text-white">
+                <div class="card-header custombg-warm text-black">
                   Current Appointments
                 </div>
                 <ul class="list-group list-group-flush">
