--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -37,7 +37,7 @@
         
                 <div class="col-md-6">
                 <div class="card">
-                    <div class="card-header custombg-warm text-white">
+                    <div class="card-header custombg-warm text-black">
                     Overview
                     </div>
                     <ul class="list-group list-group-flush">
