--- a/app/templates/headerDynamic.html
+++ b/app/templates/headerDynamic.html
@@ -12,7 +12,7 @@
   <header class="custombg-warm py-3">
     <div class="container">
       <div class="row">
-        <div class="col text-center text-white">
+        <div class="col text-center text-black">
           <h1 class="my-2 ">ECO {{ user[1][0]|upper}}{{user[1][1:] }} Scheduling</h1>
           <p>Welcome, {{ user[0] }}! You are logged in as a {{ user[1] }}</p>
           {% if user[1] == "tutor" %}
