--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -52,23 +52,25 @@
         <div style="margin:0.1px;" class="container" >
             You have the following appointments for this week: 
 
-            <!-- Current Appointments Block -->
-            <div class="col-md-6">
-              <div class="card">
+        <!-- Current Appointments Block -->
+        <div class="col-md-6">
+            <div class="card">
                 <div class="card-header custombg-warm text-black">
-                  Current Appointments
+                    Current Appointments
                 </div>
                 <ul class="list-group list-group-flush">
                     {% for time, tutor in cur_appointments %}
                     <li class="list-group-item">
                         {{time.strftime('%A, %B %d')}} at {{time.strftime('%I:%M %p')}} with {{names[tutor]}}
-                        <button class="btn warm-btn float-end view-cancel" data-tutor_netid="{{tutor}}" data-date="{{time.strftime('%Y-%m-%d')}}" data-time="{{time.strftime('%I:%M %p')}}">View/Cancel</button> 
+                        <div class="button-group">
+                            <button class="btn warm-btn float-end view-cancel" onclick="window.location.href='{{url_for('generate_ics',  tutor = names[tutor], time = time.strftime('%Y%m%dT%H%M%SZ'))}}'">Download iCal</button>
+                            <button class="btn warm-btn float-end view-cancel" data-tutor_netid="{{tutor}}" data-date="{{time.strftime('%Y-%m-%d')}}" data-time="{{time.strftime('%I:%M %p')}}">View/Cancel</button>
+                        </div>
                     </li>
                     {% endfor %}
                 </ul>
-              </div>
-            
             </div>
+        </div>
 
         </div>
         <hr>
