--- a/app/templates/tutor/tutorview.html
+++ b/app/templates/tutor/tutorview.html
@@ -56,17 +56,17 @@
     <div class="col-md-6">
       <div class="card">
           <div class="card-header custombg-warm text-black">
-              Showed Up?
+              Did the student show up?
           </div>
           <ul class="list-group list-group-flush">
               {% for appointment in no_show_appointments %}
               <li class="list-group-item d-flex justify-content-between align-items-center">
                   {{ appointment[0].strftime('%A, %B %d at %I:%M %p') }} with {{ names[appointment[1]] }}
                   <div>
-                      <button class="btn btn-success" onclick="window.location.href='{{ url_for('no_show_update', tutor_netid=appointment[1], time=appointment[0].strftime('%Y-%m-%d %I:%M %p'), value=true) }}'" title="Confirm Showed Up">
+                      <button class="btn btn-success" onclick="window.location.href='{{ url_for('no_show_update', tutor_netid=appointment[1], time=appointment[0].strftime('%Y-%m-%d %I:%M %p'), value=True) }}'" title="Confirm Showed Up">
                           <i class="bi bi-check2"></i>
                       </button>
-                      <button class="btn btn-danger" onclick="window.location.href='{{ url_for('no_show_update', tutor_netid=appointment[1], time=appointment[0].strftime('%Y-%m-%d %I:%M %p'), value=false) }}'" title="Mark No Show">
+                      <button class="btn btn-danger" onclick="window.location.href='{{ url_for('no_show_update', tutor_netid=appointment[1], time=appointment[0].strftime('%Y-%m-%d %I:%M %p'), value=False) }}'" title="Mark No Show">
                           <i class="bi bi-x"></i>
                       </button>
                   </div>
