--- a/app/templates/tutor/add_appointment.html
+++ b/app/templates/tutor/add_appointment.html
@@ -24,8 +24,8 @@
                     <br>
                     <input type="time" name="time">
                     <br>
-        
-                    <input type="submit" value="Submit"><br>
+
+                    <button class="btn warm-btn">Add Time</button>        
                 </form>        
             </div>
         </div>
