--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -42,8 +42,9 @@
                     </div>
                     <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <button class="btn warm-btn float-left weekly-summary-btn">View Weekly Summary</button>
-                        <button class="btn warm-btn float-left tutor-overview-btn">View Tutor Overview</button>
+                        <button class="btn warm-btn float-left prev-week-btn">Previous Week Summary</button>
+                        <button class="btn warm-btn float-left weekly-summary-btn">Current Week Summary</button>
+                        <button class="btn warm-btn float-left tutor-overview-btn">Tutor Overview</button>
                         <button class="btn warm-btn float-left add-users-btn">Add New Users</button>
                     </li>
                     </ul>
@@ -55,6 +56,7 @@
         <hr>
 
         <!-- Include popup containers -->
+        <div id="previous-week-modal-container"></div>
         <div id="overview-modal-container"></div>
         <div id="summary-modal-container"></div>
         <div id="add-users-modal-container"></div>
