fixes to tutor hour restrictions

--- a/app/templates/tutor/tutorview.html
+++ b/app/templates/tutor/tutorview.html
@@ -30,7 +30,7 @@
         {% include 'headerDynamic.html' with context %}
         
         <div class="container-fluid">
-          <p>You have the following appointments for this week:</p>
+          <p>You have the following upcoming appointments:</p>
       
           <!-- Current Appointments Block -->
           <div class="col-md-6">
