--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -50,7 +50,7 @@
         {% include 'headerDynamic.html' with context %}
         <hr>
         <div style="margin:0.1px;" class="container" >
-            You have the following appointments for this week: 
+            You have the following upcoming appointments: 
 
         <!-- Current Appointments Block -->
         <div class="col-md-6">
