--- a/app/templates/admin/prev_week.html
+++ b/app/templates/admin/prev_week.html
@@ -23,9 +23,9 @@
 
                 {% if summary["No Show Appointments"]|length > 0 %}
                 <br><br>
-                <b>No Show Appointments:</b><br><br>
+                <b>Students who did not show up to appointments:</b><br><br>
                 {% for appt in summary["No Show Appointments"] %}
-                {{appt}}
+                <b>{{names[appt.get_student_netid()]}} ({{appt.get_student_netid()}}):</b> {{ appt.get_time().strftime('%A, %B %d') }} at {{ appt.get_time().strftime('%I:%M %p') }} with {{ names[appt.get_tutor_netid()] }}
                 {% endfor %}
                 {% endif %}
 
