--- a/app/templates/error_handling/404.html
+++ b/app/templates/error_handling/404.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container centered">
             <h2 class="mb-4">Sorry, this page doesn't exist.</h2>
-            <a href="/index"  class="btn warm-btn btn-lg btn-block" >Back to homepage</a>
+            <a href="/user_type"  class="btn warm-btn btn-lg btn-block" >Back to dashboard</a>
         </div>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     </body>
