--- a/app/templates/error_handling/unauth.html
+++ b/app/templates/error_handling/unauth.html
@@ -18,7 +18,7 @@
     <body>
         <div class="container centered">
             <h2 class="mb-4">Sorry, you are unauthorized to view this page.</h2>
-            <a href="/index"  class="btn warm-btn btn-lg btn-block" >Log back in</a>
+            <a href="/user_type"  class="btn warm-btn btn-lg btn-block" >Back to dashboard</a>
         </div>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     </body>
